Fix overlapping navigation bar in mobile Safari

--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 body {
   display: flex;
-  min-height: calc(100vh - 25px);
   flex-direction: column;
   justify-content: space-between;
+  min-height: calc(100vh - 25px);
 }
 
 main {
@@ -30,4 +30,10 @@ a {
   hr {
     background: #fff;
   }
+}
+
+@media (max-width: 580px) {
+    body {
+      min-height: calc(100vh - 100px);
+    }
 }
